Started refactoring the controllers to follow more consistent patterns.